--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Study Buddy</title>
+  <title>StudyPal</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Study Buddy</h1>
+    <h1>StudyPal</h1>
     <p>Flashcards • Quiz • AI Assistant</p>
   </header>
 
