--- a/index.html
+++ b/index.html
@@ -136,9 +136,20 @@
   </div>
 </div>
 
+  <!-- ===== MVP add-ons (PASTE INSIDE .container) ===== -->
+<p id="privacyNote" class="muted small">
+  Privacy: your notes & decks are stored locally in your browser (no cloud sync).
+</p>
+
+<!-- Hidden tip that appears after you click "Generate Flashcards" -->
+<div id="genTip" class="tip hidden">
+  Tip: Click <b>Export Deck</b> to back up or share your deck as a .json file.
+</div>
+
   
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
